--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
 
             <svg class="dial">
-                <circle fill="transparent" stroke="#DEB6AB" stroke-width="15" 
-                        r="140" cx="30" cy="170"
+                <circle fill="transparent" stroke="#DEB6AB" 
+                        stroke-width="15" r="140" cx="10" cy="180"
                     transform="rotate(-90 100 100)" />
             </svg>
         </div>
