--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     <button id="stop"><i class="fa-solid fa-stop icon"></i></button>
                 </div>
             </div>
-
-            <svg class="dial">
+            
+            <svg class="dial" viewBox="0 0 400 400">
                 <circle fill="transparent" stroke="#DEB6AB" 
-                        stroke-width="15" r="140" cx="-5" cy="188"
+                stroke-width="15" r="140" cx="-5" cy="197"
                     transform="rotate(-90 100 100)" />
             </svg>
         </div>
